--- a/templates/main.html
+++ b/templates/main.html
@@ -5,10 +5,11 @@
 	<body>
 		<h1>Orders</h1>
 		{% for result in results %}
-			<b>{{ result['equiName'] }}</a></b><br />
-			<i>{{ result['notiDate'] }}</i><br />
-			<i>{{ result['notiTime'] }}</i><br />
-			<p>{{ result['notiContent'] }}</p>
+//			<b>{{ result['equiName'] }}</a></b><br />
+//			<i>{{ result['notiDate'] }} / {{ result['notiTime'] }}</i><br />
+//			<i>{{ result['equiCode'] }} / {{ result['order_con</i><br />
+//			<p>{{ result['notiContent'] }}</p>
+			<p>{{ result }}</p>
 			<hr />
 		{% endfor %}
 	</body>
