--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,51 +1,66 @@
-div.paleBlueRows {
-  font-family: "Times New Roman", Times, serif;
-  border: 1px solid #FFFFFF;
-  width: 350px;
-  height: 200px;
+body {
+    color: #E6E6E6;
+    background-color: #000000;
+}
+h1{
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;  
+}
+div.darkTable {
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  border: 2px solid #E6E6E6;
+  background-color: #4A4A4A;
+  width: 100%;
+  height: 100%;
   text-align: center;
   border-collapse: collapse;
 }
-.divTable.paleBlueRows .divTableCell, .divTable.paleBlueRows .divTableHead {
-  border: 1px solid #FFFFFF;
+.divTable.darkTable .divTableCell, .divTable.darkTable .divTableHead {
+  border: 1px solid #4A4A4A;
   padding: 3px 2px;
 }
-.divTable.paleBlueRows .divTableBody .divTableCell {
-  font-size: 13px;
+.divTable.darkTable .divTableBody .divTableCell {
+  font-size: 30px;
+  color: #E6E6E6;
 }
-.divTable.paleBlueRows .divTableRow:nth-child(even) {
-  background: #D0E4F5;
+.divTable.darkTable .divTableRow:nth-child(even) {
+  background: #888888;
 }
-.divTable.paleBlueRows .divTableHeading {
-  background: #0B6FA4;
-  border-bottom: 5px solid #FFFFFF;
+.divTable.darkTable .divTableRow {
+  height: 100px;
 }
-.divTable.paleBlueRows .divTableHeading .divTableHead {
-  font-size: 17px;
+.divTable.darkTable .divTableHeading {
+  background: #000000;
+  border-bottom: 3px solid #000000;
+}
+.divTable.darkTable .divTableHeading .divTableHead {
+  font-size: 30px;
   font-weight: bold;
-  color: #FFFFFF;
+  color: #E6E6E6;
   text-align: center;
-  border-left: 2px solid #FFFFFF;
+  border-left: 2px solid #4A4A4A;
 }
-.divTable.paleBlueRows .divTableHeading .divTableHead:first-child {
+.divTable.darkTable .divTableHeading .divTableHead:first-child {
   border-left: none;
 }
 
-.paleBlueRows .tableFootStyle {
-  font-size: 14px;
+.darkTable .tableFootStyle {
+  font-size: 12px;
   font-weight: bold;
-  color: #333333;
-  background: #D0E4F5;
-  border-top: 3px solid #444444;
+  color: #E6E6E6;
+  background: #000000;
+  background: -moz-linear-gradient(top, #404040 0%, #191919 66%, #000000 100%);
+  background: -webkit-linear-gradient(top, #404040 0%, #191919 66%, #000000 100%);
+  background: linear-gradient(to bottom, #404040 0%, #191919 66%, #000000 100%);
+  border-top: 1px solid #4A4A4A;
 }
-.paleBlueRows .tableFootStyle {
-  font-size: 14px;
+.darkTable .tableFootStyle {
+  font-size: 12px;
 }
 /* DivTable.com */
 .divTable{ display: table; }
 .divTableRow { display: table-row; }
 .divTableHeading { display: table-header-group;}
-.divTableCell, .divTableHead { display: table-cell;}
+.divTableCell, .divTableHead { display: table-cell; vertical-align: middle;}
 .divTableHeading { display: table-header-group;}
 .divTableFoot { display: table-footer-group;}
 .divTableBody { display: table-row-group;}
